--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -71,12 +71,11 @@
 {% block content %}
 
 <div class="container">
-    <div class="row">
-        {% for product in products %}
+    <div class="row"> 
+        {% for product in products %} 
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card">
-                <img src="{{ product.image.url }}" class="menu-img"
-                alt="{{ product.name }}">
+                <img src="{{ product.image.url }}" class="menu-img" alt="{{ product.name }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.short_description }}</p>
@@ -85,52 +84,68 @@
                     <p class="card-text">{{ product.description }}</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        Category: {{ product.category }}
+                    <li class="list-group-item"> Category: {{ product.category }}
                     </li>
                     <li class="list-group-item">£{{ product.price }}</li>
-                </ul>
-                
-
-                <!-- <form class="form container" action="{% url 'add_to_cart' product.id %}" 
-                    method="POST">
-                    {% csrf_token %}
+                </ul> 
+                {% if request.user.is_superuser %} 
+                <small class="ml-3">
+                    <a href="{% url 'edit_product' product.id %}" class="card-link btn btn-info" role="button">Edit</a>
+                </small>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#deleteProductModal{{ product.id }}"> Delete </button>
+                <!-- Modal -->
+                <div class="modal fade" id="deleteProductModal{{ product.id }}" data-bs-backdrop="static"
+                    data-bs-keyboard="false" tabindex="-1" aria-labelledby="deleteProductLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="staticBackdropLabel">Delete</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body"> Are you sure you want to delete {{ product.name }}? </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <a class="btn btn-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                {% else %} 
+                <div class="card-body">
+                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">See
+                        More Info</a>
+                </div>
+                <form class="form container" action="{% url 'add_to_cart' product.id %}" method="POST"> {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
                             <h3>Add to Cart</h3>
-                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <p class="mt-3">
+                                <strong>Quantity:</strong>
+                            </p>
                             <div class="form-group w-100">
                                 <div class="input-group">
-                                    ALTERNATIVE TO PREPEND FOR BS5??????? 
                                     <div class="input-group-prepend">
                                         <button class="decrement-qty btn 
-                                            btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" 
+                                            btn-black rounded-0" data-item_id="{{ product.id }}"
                                             id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
                                         </button>
-                                    </div>
-                                    {% for item in cart_items %}
-                                        <input class="form-control qty_input"
-                                        type="number" name="quantity"                         
-                                        value="{{ item.quantity }}"
-                                        min="1" max="15" 
-                                        data-item_id="{{ product.id }}" 
-                                        id="id_qty_{{ product.id }}">
-                                    {% empty %}
-                                        <input class="form-control qty_input"
-                                        type="number" name="quantity"                         
-                                        value=0
-                                        min="0" max="15" 
-                                        data-item_id="{{ product.id }}" 
-                                        id="id_qty_{{ product.id }}">
-                                    {% endfor %}
+                                    </div> 
+                                    {% for item in cart_items %} 
+                                    <input class="form-control qty_input" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="15"
+                                        data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}"> 
+                                    {% empty %} 
+                                    <input class="form-control qty_input" type="number" name="quantity" value=0 min="0"
+                                        max="15" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    {% endfor %} 
                                     <div class="input-group-append">
                                         <button class="increment-qty btn 
-                                            btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" 
+                                            btn-black rounded-0" data-item_id="{{ product.id }}"
                                             id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
@@ -140,140 +155,31 @@
                                 </div>
                             </div>
                         </div>
-
-
-                        <div class="col-12">
-                            {% if cart %}
+                        <div class="col-12"> 
+                            {% if cart %} 
                             <a href="{% url 'checkout' %}" class="btn">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Checkout</span>
-                            </a>
-                            {% endif %}
+                            </a> 
+                            {% endif %} 
                             <input type="submit" class="btn btn-info" value="Add to Cart">
                         </div>
-                         CHECK IF NEEDED -->
-                        <!-- hidden form element to redirect back to page came from (redirect_url) 
-                        <input type="hidden" name="redirect_url" 
-                            value="{{ request.path }}">
+                        <!-- hidden form element to redirect back to page came from (redirect_url) -->
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
-                </form> -->
-                <!-- <div class="card-body">
-                    <a href="{% url 'product_detail' product.id %}" 
-                        class="card-link">See Info</a>
-                </div> -->
-                <!-- add at to cart button -->
-                    {% if request.user.is_superuser %}
-                        <small class="ml-3">
-                            <!-- <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info"
-                                role="button">See
-                                More Info</a> -->
-                            <a href="{% url 'edit_product' product.id %}" class="card-link btn btn-info"
-                                role="button">Edit</a> 
-                            <!-- <a class="text-danger" 
-                                href="{% url 'delete_product' product.id %}">Delete</a> -->
-                        </small>
-                
-                <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteProductModal{{ product.id }}">
-        Launch static backdrop modal
-                        </button>
-
-                        <!-- Modal -->
-                        <div class="modal fade" id="deleteProductModal{{ product.id }}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="deleteProductLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel">Delete</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to delete {{ product.name }}?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <a class="btn btn-danger" 
-                                                    href="{% url 'delete_product' product.id %}">Delete</a>
-                                </div>
-                                </div>
-                            </div>
-                        </div> 
-                    {% else %}
-                    <div class="card-body">
-                        <!-- <a href="#link" class="btn btn-info" role="button">Link Button</a> -->
-                        <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">See
-                            More Info</a>
-                    </div>
-                    <form class="form container" action="{% url 'add_to_cart' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col-12">
-                                <h3>Add to Cart</h3>
-                                <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-100">
-                                    <div class="input-group">
-                                        <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn 
-                                            btn-black rounded-0" data-item_id="{{ product.id }}"
-                                                id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        {% for item in cart_items %}
-                                        <input class="form-control qty_input" type="number" name="quantity"
-                                            value="{{ item.quantity }}" min="1" max="15" data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}">
-                                        {% empty %}
-                                        <input class="form-control qty_input" type="number" name="quantity" value=0
-                                            min="0" max="15" data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}">
-                                        {% endfor %}
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn 
-                                            btn-black rounded-0" data-item_id="{{ product.id }}"
-                                                id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-
-                            <div class="col-12">
-                                {% if cart %}
-                                <a href="{% url 'checkout' %}" class="btn">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Checkout</span>
-                                </a>
-                                {% endif %}
-                                <input type="submit" class="btn btn-info" value="Add to Cart">
-                            </div>
-                            <!-- CHECK IF NEEDED -->
-                            <!-- hidden form element to redirect back to page came from (redirect_url) -->
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        </div>
-                    </form>
-
-                    {% endif %}
+                </form> 
+                {% endif %}
             </div>
-        </div>
-        {% empty %}
-         NO PRODUCTS YET
-        {% endfor %}
+        </div> 
+        {% empty %} 
+        NO PRODUCTS YET 
+        {% endfor %} 
     </div>
-</div>
-{% endblock %}
-
-{% block postloadjs %}
+</div> 
+{% endblock %} 
+{% block postloadjs %} 
 {{ block.super }}
-{% include 'products/includes/quantity_input_script.html' %}
+{% include 'products/includes/quantity_input_script.html' %} 
 {% endblock %}
