--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="#">
-    <html lang="en">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Paytone+One&display=swap"
@@ -52,7 +51,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>CHANGE THIS!!!{% block extra_title %}{% endblock %}</title>
+    <title>GetWurst {% block extra_title %}{% endblock %}</title>
 </head>
 
 <body>
