--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -7,6 +7,7 @@
     {{ event.name }}
     <img src="{{ event.image.url }}" alt="{{ event.name }}">
     <a href="{{ event.link }}">{{ event.name }}</a>
+    <p>{{ event.date }}</p>
 {% endfor %}
 
 {% endblock %}
