--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -87,7 +87,16 @@
         </div>   
     </div> 
 </section>
-<h1>HEADING</h1>
+
+<section class="container my-3">
+    <h2 class="text-center">Our Story</h2>
+    <p>Get Wurst is run by Paul and Lindsay Melbourne, who spent many a trip to Berlin eating currywurst on the streets
+        in the early hours. Get Wurst was then born in 2015 out of a frustration of not being able to get a proper
+        currywurst in the UK. Well, now you can, dishing up the good stuff at events and festivals across the North, and
+        at our new home in Sheffield city centre at the top of Fargate, where you can enjoy some serious german street
+        food 7 days a week from lunch till late.</p>
+
+</section>
 
 
 {% endblock %}
