--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -8,11 +8,19 @@
                  <i class="fa-brands fa-facebook fs-1"></i>
             </a>
         </li>
-        <li class="d-inline text-decoration-none">
+        <li class="d-inline text-decoration-none me-5">
             <a href="https://www.instagram.com/" class="text-decoration-none" rel="noopener" target="_blank"
                 aria-label="Go to Get Wurst Instagram page (opens in a new tab)">
                 <i class="fa-brands fa-instagram fs-1"></i>
             </a>
+        </li>
+        <li class="d-inline text-decoration-none">
+            <a href="https://www.privacypolicygenerator.info/live.php?token=U9Qya6pffZHvuxKlvoUsgnWuvzVZf0Cw"
+                class="text-decoration-none" rel="noopener" target="_blank"
+                aria-label="Go to Get Wurst Privacy Policy (opens in a new tab)">
+                Privacy Policy
+            </a>
+            
         </li>
     </ul>
 </footer>
