--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -69,20 +69,37 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="container">
     <h1>Events</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid aspernatur natus assumenda nulla vitae dolorum repellendus nihil illum delectus! Maiores laudantium ea obcaecati voluptatibus neque exercitationem dolorum sunt quos nesciunt.
-    Delectus nemo magni aliquid culpa. Minus excepturi beatae quam adipisci deserunt esse laborum ipsam, repellendus, ducimus temporibus voluptate reiciendis? Quia labore consequuntur vitae placeat. Possimus quod quasi tenetur obcaecati quidem.</p>
-
-    {% for event in events %}
-    {{ event.name }}
-    <img src="{{ event.image.url }}" alt="{{ event.name }}">
-    <a href="{{ event.link }}">{{ event.name }}</a>
-    <p>{{ event.date|date:"M o" }}</p>
-    {% endfor %}
-
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid aspernatur natus assumenda nulla vitae dolorum
+        repellendus
+        nihil illum delectus! Maiores laudantium ea obcaecati voluptatibus neque exercitationem dolorum sunt quos
+        nesciunt.
+        Delectus nemo magni aliquid culpa. Minus excepturi beatae quam adipisci deserunt esse laborum ipsam,
+        repellendus,
+        ducimus temporibus voluptate reiciendis? Quia labore consequuntur vitae placeat. Possimus quod quasi tenetur
+        obcaecati quidem.</p>
 </div>
 
+{% for event in events %}
+<div class="card mb-3 border border-5 border-dark w-75 mx-auto my-5">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="{{ event.image.url }}" alt="{{ event.name }}" class=" img-fluid">
+        </div>
+        <div class="col-md-8 d-flex">
+            <div class="card-body my-auto">
+                <a href="{{ event.link }}">
+                    <h1 class="card-title">{{ event.name }}</h1>
+                </a>
+                <p class="card-text">{{ event.date|date:"M o" }}</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endfor %}
 {% endblock %}
 
 
