--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -95,7 +95,9 @@
                         <div class="card-body">
                             <div class="image-container">
                                 <img class="card-img-top" src="{{ event.image.url }}" alt="{{ event.name }}">
-                                <h1 class="card-title">{{ event.name }}</h1>
+                                <a href="{{ event.link }}" target="_blank" rel="noopener" aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
+                                    <h1 class="card-title">{{ event.name }}</h1>
+                                </a>
                                 <p class="card-text">{{ event.date|date:"M o" }}</p>
                             </div>
                             
@@ -107,11 +109,9 @@
             <div class="row">
                 {% endif %}
                 {% endfor %}
-
             </div>
         </div>
-    </div>
-    
+    </div>  
 </div>
 {% endblock %}
  
