--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -24,7 +24,6 @@
                 <strong>{{ order.email }}</strong>.</p>
         </div>
     </div>
-
     <div class="row">
         <div class="col-12 col-lg-7"></div>
         <div class="order-confirmation-wrapper p-2 border">
@@ -33,7 +32,6 @@
                     <small class="text-muted">Order Info:</small>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="mb-0 text-black font-weight-bold">Order Number</p>
@@ -42,7 +40,6 @@
                     <p class="mb-0">{{ order.order_number }}</p>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="mb-0 text-black font-weight-bold">Order Date</p>
@@ -51,13 +48,11 @@
                     <p class="mb-0">{{ order.date }}</p>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col">
                     <small class="text-muted">Order Details:</small>
                 </div>
             </div>
-
             {% for item in order.lineitems.all %}
             <div class="row">
                 <div class="col-12 col-md-4">
@@ -71,13 +66,6 @@
                 </div>
             </div>
             {% endfor %}
-
-            <!-- <div class="row">
-                <div class="col">
-                    <small class="text-muted">Delivering To:</small>
-                </div>
-            </div> -->
-
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="mb-0 text-black font-weight-bold">Full Name</p>
@@ -86,67 +74,6 @@
                     <p class="mb-0">{{ order.full_name }}</p>
                 </div>
             </div>
-
-            <!-- <div class="row">
-                <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Address 1</p>
-                </div>
-                <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.street_address1 }}</p>
-                </div>
-            </div> -->
-
-            <!-- {% if order.street_address2 %}
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Address 2</p>
-                </div>
-                <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.street_address1 }}</p>
-                </div>
-            </div>
-            {% endif %} -->
-
-            <!-- {% if order.county %}
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">County</p>
-                </div>
-                <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.county }}</p>
-                </div>
-            </div>
-            {% endif %} -->
-
-            <!-- <div class="row">
-                <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Town or City</p>
-                </div>
-                <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.town_or_city }}</p>
-                </div>
-            </div> -->
-
-            <!-- {% if order.postcode %}
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Postal Code</p>
-                </div>
-                <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.postcode }}</p>
-                </div>
-            </div>
-            {% endif %} -->
-
-            <!-- <div class="row">
-                <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Country</p>
-                </div>
-                <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.country }}</p>
-                </div>
-            </div> -->
-
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="mb-0 text-black font-weight-bold">Phone Number</p>
@@ -155,13 +82,6 @@
                     <p class="mb-0">{{ order.phone_number }}</p>
                 </div>
             </div>
-
-            <!-- <div class="row">
-                <div class="col">
-                    <small class="text-muted">Billing Info:</small>
-                </div>
-            </div> -->
-
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="mb-0 text-black font-weight-bold">Order Total</p>
@@ -170,44 +90,28 @@
                     <p class="mb-0">£{{ order.total }}</p>
                 </div>
             </div>
-
-            <!-- <div class="row">
-                <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Delivery</p>
-                </div>
-                <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.delivery_cost }}</p>
-                </div>
-            </div> -->
-
-            <!-- <div class="row">
-                <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Grand Total</p>
-                </div>
-                <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.grand_total }}</p>
-                </div>
-            </div> -->
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-12 col-lg-7 text-right">
-        {% if from_profile %}
-        <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
-            <span class="icon mr-2">
-                <i class="fas fa-angle-left"></i>
-            </span>
-            <span class="text-uppercase">Back to Profile</span>
-        </a>
-        {% else %}
-        <a href="{% url 'home' %}" class="btn btn-black rounded-0 my-2">
-            <span class="icon mr-2">
-                <i class="fas fa-gifts"></i>
-            </span>
-            <span class="text-uppercase">Back to home page</span>
-        </a>
-        {% endif %}
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-lg-7 text-right">
+            {% if from_profile %}
+            <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                <span class="icon mr-2">
+                    <i class="fas fa-angle-left"></i>
+                </span>
+                <span class="text-uppercase">Back to Profile</span>
+            </a>
+            {% else %}
+            <a href="{% url 'home' %}" class="btn btn-black rounded-0 my-2">
+                <span class="icon mr-2">
+                    <i class="fas fa-gifts"></i>
+                </span>
+                <span class="text-uppercase">Back to home page</span>
+            </a>
+            {% endif %}
+        </div>
     </div>
 </div>
 {% endblock %}
