--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -69,21 +69,19 @@
 {% endblock %}
 
 {% block content %}
-<button type="button" class="btn btn-primary">Primary</button>
 <section class="container my-3">
     <div class="row hero align-items-center">
-        <div class="col-11 border">
+        <div class="col-11">
             <h1 class="py-3">Banging <span class="gw-h1">BRATWURSTS.</span></h1>
             <h1 class="py-3">Proper <span class="gw-h1">CURRYWURST.</span></h1>
             <h1 class="py-3">And now.......<br><span class="gw-h1">BURGERS.</span></h1>
             <div class="my-3">
                 <h4>
-                    <a class="btn btn-cta" href="{% url 'products' %}" role="button">View Menu</a>
-                    <!-- <a class="btn btn-secondary" href="#" role="button">CTA</a> -->
+                    <a class="btn btn-lg btn-cta" href="{% url 'products' %}" role="button">View Menu</a>
                 </h4>
             </div>
         </div>
-        <div class="col-1 border">
+        <div class="col-1">
             <img src="media/hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger">
         </div>   
     </div> 
