--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,6 +12,10 @@
   --bs-accordion-border-color: var(--gw-dark);
 }
 
+.form-control {
+  border-radius: 0;
+}
+
 .btn {
   --bs-btn-border-radius: 0;
 }
@@ -39,6 +43,7 @@
   --bs-btn-disabled-bg: #0d6efd;
   --bs-btn-disabled-border-color: #0d6efd;
 }
+
 .card {
   --bs-card-border-color: var(--gw-dark);
   --bs-card-border-width: 5px;
