--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -74,7 +74,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis fugit amet blanditiis libero eligendi? Blanditiis
         eius maxime, placeat nemo similique optio. Placeat sint labore maxime dolor, saepe repellendus ad? Harum.</p>
     
-    <h2>Bratwursts</h2>
+    <h2 id="bratwursts">Bratwursts</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, qui. Iste eaque, laboriosam ex temporibus,
          doloribus facilis amet minima assumenda pariatur voluptate aut impedit eum dolor perferendis soluta atque culpa.</p>
     <div class="row">
@@ -85,7 +85,7 @@
         {% endfor %} 
     </div>
 
-    <h2>Currywurst</h2>
+    <h2 id="currywursts">Currywurst</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cupiditate eligendi deserunt architecto rem dicta sed voluptates, 
         laudantium omnis excepturi exercitationem. Minus necessitatibus vitae explicabo molestiae quis consequatur earum placeat.</p>
     <div class="row">
@@ -96,7 +96,7 @@
         {% endfor %}
     </div>
 
-    <h2>Burgers</h2>
+    <h2 id="burgers">Burgers</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores recusandae voluptatibus rem odit quisquam fugit qui, 
         molestias omnis alias dolor blanditiis animi aut debitis explicabo laudantium porro dolore consectetur tenetur!</p>
     <div class="row">
