--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -4,13 +4,16 @@
              <ul class="navbar-nav ms-auto mb-2 mb-lg-0 w-100 
                         justify-content-center flex-wrap">
                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products' %}?category=Bratwurst">Bratwurst</a>
+                    <!-- <a class="nav-link" href="{% url 'products' %}?category=Bratwurst">Bratwurst</a> -->
+                    <a class="nav-link" href="/menu/#bratwursts">Bratwurst</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'products' %}?category=Currywurst">Currywurst</a>
+                     <!-- <a class="nav-link" href="{% url 'products' %}?category=Currywurst">Currywurst</a> -->
+                     <a class="nav-link" href="/menu/#currywursts">Currywurst</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'products' %}?category=Burger">Burgers</a>
+                     <!-- <a class="nav-link" href="{% url 'products' %}?category=Burger">Burgers</a> -->
+                     <a class="nav-link" href="/menu/#burgers">Burgers</a>
                  </li>
                  <li>
                      <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
