--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -91,9 +91,11 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
-                                <img class="card-img-top card-img" src="{{ event.image.url }}" alt="{{ event.name }}">
+                                <!-- <img class="card-img-top card-img" src="{{ event.image.url }}" alt="{{ event.name }}"> -->
                                 <a href="{{ event.link }}" class="event-link" target="_blank" rel="noopener"
                                     aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
+                                    <img class="card-img-top card-img" src="{{ event.image.url }}"
+                                        alt="{{ event.name }}">
                                     <h1 class="card-title">{{ event.name }}</h1>
                                 </a>
                                 <p class="card-text">{{ event.date|date:"M o" }}</p>
