--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,6 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
+<div class="border border-dark border-5 w-50 mx-auto p-2">
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -14,8 +15,14 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <a href="{% url 'products' %}" class="btn btn-cta btn-lg">
+    <span class="icon">
+      <i class="fas fa-chevron-left"></i>
+    </span>
+    <span class="text-uppercase">Keep Shopping</span>
+  </a>
+  <button type="submit" class="btn btn-primary btn-lg">{% trans 'Sign Out' %}</button>
 </form>
-
+</div>
 
 {% endblock %}
