--- a/products/templates/products/includes/menu-card.html
+++ b/products/templates/products/includes/menu-card.html
@@ -55,7 +55,7 @@
                 <div class="card-body">
                     <div class="d-grid gap-2 mb-2">
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#deleteProductModal">
+                            data-bs-target="#deleteProductModal{{ product.id }}">
                             DELETE
                         </button>
                         <a class="btn btn-primary" href="{% url 'edit_product' product.id %}">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <!-- Modal -->
-                <div class="modal custom-modal fade" id="deleteProductModal" tabindex="-1"
+                <div class="modal custom-modal fade" id="deleteProductModal{{ product.id }}" tabindex="-1"
                     aria-labelledby="deleteProductModalLabel"
                     aria-hidden="true">
                     <div class="modal-dialog">
