--- a/products/templates/products/edit.html
+++ b/products/templates/products/edit.html
@@ -2,16 +2,14 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
+<div class="container border col-6">
     <div class="row">
-        <div class="col-12 col-md-6">
-            <h2 class="logo-font mb-4">Product Management</h2>
-            <h5 class="text-muted">Edit a Product</h5>
-        </div>
+        <h2 class="logo-font mb-4">Product Management</h2>
+        <h5 class="text-muted">Edit a Product</h5>
     </div>
 
     <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12">
             <form method="POST" action="{% url 'edit_product' product.id %}" 
                 class="form mb-2"
                 enctype="multipart/form-data">
