--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -127,11 +127,14 @@
                             {% endif %} 
                         {% endif %}
                     {% endfor %}
+
+                    {% if user.is_authenticated %}
                     <form action="{% url 'answer' question.id %}" method="post">
                         {% csrf_token %}
                         {{ answer_form | crispy }}
                         <input type="submit" class="btn btn-primary" value="Submit Answer">
                     </form>
+                    {% endif %}
                 </div>  
             </div>
         </div>
