--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -117,14 +117,17 @@
                                      
                                     <!-- <input type="hidden" name="next" value=" {{ answer.id }}"> -->
                                 </form>
-                                
                                 <span class="d-inline-block mb-3" >Liked by {{ answer.like.all.count }}
                                 user{{ answer.like.all.count|pluralize }}</span>     
-                                <hr>
                                 {% if forloop.last %}
                                     <h3>Feel free to submit another answer below!</h3>
+                                {% else %}
+                                <hr>
                                 {% endif %}
                             {% endif %} 
+                         {% if not forloop.last %}
+                         <hr>
+                         {% endif %}
                         {% endif %}
                     {% endfor %}
 
