--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,6 +22,7 @@
   --gw-link-hover: #578DB6;
 }
 
+
 .select {
   border: 3px solid var(--gw-dark);
 }
@@ -60,9 +61,10 @@ h6 {
   --bs-accordion-border-color: var(--gw-dark);
 }
 
-.accordion-item {
-  border-radius: 0 !important;
+.accordion-body :last-child > hr {
+  display: none;
 }
+
 
 .btn {
   --bs-btn-border-radius: 0;
